# agent-io

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic.rs  multi_provider.rs
src/: lib.rs  observability.rs
src/agent/: builder.rs  compaction.rs  config.rs  events.rs  mod.rs  service.rs
src/llm/: anthropic.rs  base.rs  deepseek.rs  google.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs  schema.rs  types.rs
src/llm/anthropic/: mod.rs  request.rs  response.rs  types.rs
src/llm/deepseek/: builder.rs  mod.rs
src/llm/google/: mod.rs  request.rs  response.rs  types.rs
src/llm/groq/: builder.rs  mod.rs
src/llm/mistral/: builder.rs  mod.rs
src/llm/ollama/: builder.rs  mod.rs
src/llm/openai/: mod.rs  request.rs  response.rs  types.rs
src/llm/openai_compatible/: mod.rs  request.rs  response.rs  types.rs
src/llm/openrouter/: builder.rs  mod.rs
src/llm/types/: cache.rs  content.rs  message.rs  mod.rs  response.rs  tool.rs
src/memory/: buffer.rs  embeddings.rs  entry.rs  manager.rs  mod.rs  ranker.rs  store.rs
src/memory/backends/: in_memory.rs  lancedb.rs  mod.rs  sqlite.rs
src/tokens/: mappings.rs  mod.rs  pricing.rs  service.rs  views.rs
src/tools/: builder.rs  depends.rs  function.rs  mod.rs  simple.rs  tool.rs
